@@ -158,7 +158,7 @@ std::optional<int> RaisingBlockFloor(short itemNumber, int x, int y, int z)
 		auto* item = &g_Level.Items[itemNumber];
 
 		auto* bounds = GetBoundsAccurate(item);
-		int height = abs(bounds->Y2 - bounds->Y1);
+		int height = bounds->Height();
 
 		int currentHeight = item->Pose.Position.y - height * item->ItemFlags[1] / 4096;
 		return std::optional{ currentHeight };
